python/testData/inspections/PyUnresolvedReferencesInspection/dunderClass.py
class A:
    def foo(self):
        return <error descr="Unresolved reference '__class__'">__class__</error>